--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "google-maps": "^4.3.3",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
